--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
         /* max-width: 1000px; */
         align-items: center;
         justify-content: center;
+        margin-bottom: 20px;
       }
 
       #warranty-icon {
@@ -946,16 +947,20 @@ data-progressive-profiling=""
           </a>
         </li>
         <li>
+          <a href="https://www.ebit.com.br/print-loja">
           <img
             src="https://d335luupugsy2.cloudfront.net/cms/files/129450/1580294954/$algpoj4fib9"
             alt="euro e"
           />
+        </a>
         </li>
         <li>
+          <a href="https://certificados.trustvox.com.br/printloja">
           <img
             src="https://d335luupugsy2.cloudfront.net/cms/files/129450/1580294954/$s32ire96zod"
             alt="trust vox"
           />
+        </a>
         </li>
         <li>
           <img
